nginx.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - localhost # your actual domain name
  #     secretName: nginx-secret
  rules:
      - host: localhost
        http:
          paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: nginx-service
                  port:
                    number: 8080
